log4j rotation strategy committed.

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,7 @@
 log4j.rootLogger=INFO, FILE_METRIC,FILE_ERROR
 
 # Direct log messages to a log file
+log4j.logger.metriclogger=DEBUG,FILE_METRIC
 log4j.appender.FILE_METRIC=org.apache.log4j.rolling.RollingFileAppender
 log4j.appender.FILE_METRIC.rollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
 log4j.appender.FILE_METRIC.rollingPolicy.FileNamePattern=/home/raghunandangupta/Desktop/CSV/ALLCSV/exceptions.%d-%i.gz
@@ -11,6 +12,7 @@ log4j.appender.FILE_METRIC.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE_METRIC.layout.ConversionPattern=[%p] %d  %x %c %M - %m%n
 log4j.appender.FILE_METRIC.Threshold=DEBUG
 
+log4j.logger.errorlogger=INFO,FILE_ERROR
 log4j.appender.FILE_ERROR=org.apache.log4j.rolling.RollingFileAppender
 log4j.appender.FILE_ERROR.rollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
 log4j.appender.FILE_ERROR.rollingPolicy.FileNamePattern=/home/raghunandangupta/Desktop/CSV/ALLCSV/server.%d-%i.gz
